--- a/GSCoder/GSCoder/GSCoder.csproj
+++ b/GSCoder/GSCoder/GSCoder.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Directories.Net" Version="1.0.0" />
     <PackageReference Include="Eto.Forms" Version="2.7.1" />
   </ItemGroup>
 
